# saas-to-neo4j-sync-template

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TEMPLATE_USAGE.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  {project}_sync.py
.claude/: CLAUDE.md
doc/: API_INTEGRATION_GUIDE.md  DEVELOPMENT_GUIDELINES.md  GETTING_STARTED.md  MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  SCHEMA_DESIGN_GUIDE.md  TEST_GUIDE.md
task/: TASK_MASTER_GUIDE.md  issue_template.md  task_template.md
test/: README.md  __init__.py  conftest.py  pytest.ini  test_api_client.py  test_config.py  test_entity_sync.py  test_orchestrator_template.py
{project}_sync/: __init__.py  config.py  neo4j_base.py  orchestrator.py  {api}_client.py
{project}_sync/analytics/: __init__.py  aggregation_nodes.py  denormalization.py
{project}_sync/entities/: __init__.py  customer.py  user.py
{project}_sync/metrics/: __init__.py  project_metrics.py
{project}_sync/migrations/: __init__.py  migration_001_create_indexes.py
{project}_sync/relationships/: __init__.py  customer_relationships.py
